# celery-django-kubernetes-experiment

./: .gitignore  Dockerfile  README.md  docker-compose.yml  prepare.sh  pyproject.toml  run_tasks.py  tasks.py
k8s/: db-deployment.yaml  db-service.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  redis-deployment.yaml  redis-service.yaml  server-deployment.yaml  server-service.yaml  worker-deployment.yaml
mysite/: db.sqlite3
mysite/mysite/: celery.py  settings.py  urls.py
mysite/polls/: models.py  serializers.py  tasks.py  urls.py  viewsets.py
mysite/polls/migrations/: 0001_initial.py
